css modules order repro

--- a/next-css-modules-order/package.json
+++ b/next-css-modules-order/package.json
@@ -8,15 +8,17 @@
     "tsc": "tsc --version && tsc"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "prettier": "^3.4.1",
     "typescript": "^5.7.2"
